@@ -605,7 +605,6 @@ tgdb_send (struct tgdb *tgdb, char *command,
   /* Create the client command */
   tcc = tgdb_client_command_create (ibuf_get (temp_command),
 				    TGDB_CLIENT_COMMAND_NORMAL,
-				    TGDB_CLIENT_COMMAND_DISPLAY_COMMAND_AND_RESULTS,
 				    TGDB_CLIENT_COMMAND_ACTION_NONE, NULL);
 
   ibuf_free (temp_command);
